--- a/src/StartupProjectManager.Services/Properties/Resources.resx
+++ b/src/StartupProjectManager.Services/Properties/Resources.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Debug_ParameterTemplate" xml:space="preserve">
+    <value>"name": "{0}", "value": "{1}"</value>
+  </data>
   <data name="Debug_StartMethod" xml:space="preserve">
-    <value>service": "{serviceName}", "method": "{methodName}", "parameter": {@parameter}</value>
+    <value>"service": "{serviceName}", "method": "{methodName}", "parameter": {@parameter}"</value>
   </data>
 </root>
